<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
		<variable
			name="viewModel"
			type="com.example.moviesapp.app.login.LoginViewModel" />
	</data>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorAccent">

		<TextView
			android:id="@+id/username_tv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="90dp"
			style="@style/TitleTextStyle"
			android:text="@string/user_name_text"/>

		<EditText
			android:id="@+id/username_et"
			android:layout_width="@dimen/et_width"
			android:layout_height="@dimen/et_height"
			android:layout_marginStart="40dp"
			android:background="@drawable/movie_list_background"
			android:layout_marginEnd="40dp"
			android:padding="@dimen/et_padding"
			android:hint="@string/username_et_hint"
			android:text="@={viewModel.username}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/username_tv"
			android:layout_marginTop="15dp"/>

		<TextView
			android:id="@+id/passcode_tv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/username_et"
			android:layout_marginTop="30dp"
			style="@style/TitleTextStyle"
			android:text="@string/password_text"/>

		<EditText
			android:id="@+id/passcode_et"
			android:layout_width="@dimen/et_width"
			android:layout_height="@dimen/et_height"
			android:background="@drawable/movie_list_background"
			android:text="@={viewModel.password}"
			android:padding="@dimen/et_padding"
			android:hint="@string/password_et_hint"
			android:inputType="textPassword"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/passcode_tv"
			android:layout_marginTop="15dp"
			android:layout_marginStart="40dp"
			android:layout_marginEnd="40dp"/>

		<TextView
			android:id="@+id/wrong_credentials_tv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/red"
			app:layout_constraintTop_toBottomOf="@+id/passcode_et"
			android:layout_marginTop="10dp"
			android:text="@string/wrong_credentials_text"
			android:layout_marginStart="40dp"
			android:layout_marginEnd="40dp"
			visibleOrNot="@{viewModel.isErrorVisible}" />


		<Button
			android:id="@+id/login_btn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:enabled="@{viewModel.isLoginEnabled}"
			android:onClick="@{() -> viewModel.login()}"
			app:layout_constraintTop_toBottomOf="@+id/wrong_credentials_tv"
			android:layout_marginTop="15dp"
			android:layout_marginStart="40dp"
			android:layout_marginEnd="40dp"
			android:text="@string/login_text"/>

		<Button
			android:id="@+id/register_btn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/login_btn"
			android:layout_marginTop="15dp"
			android:text="@string/register_text"
			android:layout_marginStart="40dp"
			android:layout_marginEnd="40dp"/>

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>